# discord-quest-helper

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: build-release.yml
public/: version-desc.txt
src/: App.vue  i18n.ts  style.css
src-runner/: Cargo.toml
src-runner/src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: .gitkeep
src-tauri/src/: discord_api.rs  discord_gateway.rs  game_simulator.rs  lib.rs  main.rs  models.rs  quest_completer.rs  rpc.rs  runner.rs  token_extractor.rs
src/api/: tauri.ts
src/components/: GameSelector.vue  QuestCard.vue  QuestProgress.vue  TitleBar.vue  UserStatus.vue
src/components/ui/dialog/: DialogContent.vue
src/locales/: en.ts  es.ts  ja.ts  ko.ts  ru.ts  th.ts  zh-TW.ts  zh.ts
src/stores/: auth.ts  quests.ts  version.ts
src/views/: GameSimulator.vue  Home.vue  Settings.vue
