[package]
name = "discord-quest-helper"
version = "0.1.0"
edition = "2021"

[lib]
name = "discord_quest_helper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
discord-sdk = "0.4.0"
once_cell = "1.18"

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
regex = "1"
base64 = "0.22"
aes-gcm = "0.10"
rand = "0.8"
anyhow = "1"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
flate2 = "1"
url = "2"
tauri-plugin-fs = "2.4.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Security_Cryptography",
    "Win32_Foundation",
    "Storage_Streams",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
